--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -8,7 +8,8 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+../node_modules
+node_modules/
 dist-ssr
 *.local
 
@@ -17,8 +18,11 @@ dist-ssr
 !.vscode/extensions.json
 .idea
 .DS_Store
+*.code-workspace
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+*.json
+./node_modules
